@@ -56,7 +56,8 @@ enum KChartStackType {
     KCHARTSTACKTYPE_DEPTH,				/* "behind" (even non-3D) */
     KCHARTSTACKTYPE_SUM,
     KCHARTSTACKTYPE_BESIDE,
-    KCHARTSTACKTYPE_LAYER
+    KCHARTSTACKTYPE_LAYER,
+    KCHARTSTACKTYPE_PERCENT
 };
 
 
